remove extra comment char
Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

--- a/docker/nginx/nginx-key.conf
+++ b/docker/nginx/nginx-key.conf
@@ -209,7 +209,7 @@ http {
             proxy_pass http://rules:${MF_RULES_HTTP_PORT}/;
         }
 
-        # # Proxy pass to uiconfigs service
+        # Proxy pass to uiconfigs service
         location /uiconfigs {
             include snippets/proxy-headers.conf;
             proxy_pass http://uiconfigs:${MF_UI_CONFIGS_HTTP_PORT};
