NOISSUE - Add event consumer name env for downlinks and modbus (#944)
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -333,6 +333,7 @@ MF_DOWNLINKS_DB_USER=mainflux
 MF_DOWNLINKS_DB_PASS=mainflux
 MF_DOWNLINKS_DB=downlinks
 MF_DOWNLINKS_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_DOWNLINKS_EVENT_CONSUMER=downlinks
 
 # Converters
 MF_CONVERTERS_LOG_LEVEL=debug
@@ -379,6 +380,8 @@ MF_MODBUS_DB_PORT=5432
 MF_MODBUS_DB_USER=mainflux
 MF_MODBUS_DB_PASS=mainflux
 MF_MODBUS_DB=modbus
+MF_MODBUS_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_MODBUS_EVENT_CONSUMER=modbus
 
 ### UI Configs
 MF_UI_CONFIGS_LOG_LEVEL=debug
