--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -645,6 +645,7 @@ services:
       MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
       MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
       MF_DOWNLINKS_ES_URL: ${MF_DOWNLINKS_ES_URL}
+      MF_DOWNLINKS_EVENT_CONSUMER: ${MF_DOWNLINKS_EVENT_CONSUMER}
     ports:
       - ${MF_DOWNLINKS_HTTP_PORT}:${MF_DOWNLINKS_HTTP_PORT}
     networks:
@@ -686,6 +687,8 @@ services:
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
       MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
       MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
+      MF_MODBUS_ES_URL: ${MF_MODBUS_ES_URL}
+      MF_MODBUS_EVENT_CONSUMER: ${MF_MODBUS_EVENT_CONSUMER}
     ports:
       - ${MF_MODBUS_HTTP_PORT}:${MF_MODBUS_HTTP_PORT}
     networks:
