NOISSUE - modbus and webhooks Redis ENVARS
Signed-off-by: Manuel Imperiale <manuel.imperiale@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -509,8 +509,8 @@ services:
       MF_FILESTORE_SECRET: ${MF_FILESTORE_SECRET}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_AUTH_GRPC_URL: ${MF_AUTH_GRPC_URL}
-      MF_AUTH_GRPC_TIMEOUT: ${MF_AUTH_GRPC_TIMEOUT}
+      MF_FILESTORE_ES_URL: ${MF_FILESTORE_ES_URL}
+      MF_FILESTORE_EVENT_CONSUMER: ${MF_FILESTORE_EVENT_CONSUMER}
     ports:
       - ${MF_FILESTORE_HTTP_PORT}:${MF_FILESTORE_HTTP_PORT}
     networks:
@@ -553,6 +553,8 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
+      MF_WEBHOOKS_ES_URL: ${MF_WEBHOOKS_ES_URL}
+      MF_WEBHOOKS_EVENT_CONSUMER: ${MF_WEBHOOKS_EVENT_CONSUMER}
     ports:
       - ${MF_WEBHOOKS_HTTP_PORT}:${MF_WEBHOOKS_HTTP_PORT}
     networks:
