--- a/docker/.env
+++ b/docker/.env
@@ -306,6 +306,8 @@ MF_FILESTORE_DB=filestore
 MF_FILESTORE_DB_HOST=filestore-db
 MF_FILESTORE_DB_SSL_MODE=disable
 MF_FILESTORE_DB_SSL_CERT=""
+MF_FILESTORE_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_FILESTORE_EVENT_CONSUMER=filestore
 
 ## Webhooks
 MF_WEBHOOKS_LOG_LEVEL=debug
@@ -313,13 +315,14 @@ MF_WEBHOOKS_HTTP_PORT=9021
 MF_WEBHOOKS_SECRET=secret
 MF_WEBHOOKS_SERVER_CERT=""
 MF_WEBHOOKS_SERVER_KEY=""
-MF_WEBHOOKS_AUTH_GRPC_TIMEOUT=1s
 MF_WEBHOOKS_CA_CERTS=""
 MF_WEBHOOKS_CLIENT_TLS=false
 MF_WEBHOOKS_DB_PORT=5432
 MF_WEBHOOKS_DB_USER=mainflux
 MF_WEBHOOKS_DB_PASS=mainflux
 MF_WEBHOOKS_DB=webhooks
+MF_WEBHOOKS_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_WEBHOOKS_EVENT_CONSUMER=webhooks
 
 ### Downlinks
 MF_DOWNLINKS_LOG_LEVEL=debug
@@ -346,7 +349,6 @@ MF_ALARMS_LOG_LEVEL=debug
 MF_ALARMS_HTTP_PORT=9026
 MF_ALARMS_SERVER_CERT=""
 MF_ALARMS_SERVER_KEY=""
-MF_ALARMS_AUTH_GRPC_TIMEOUT=1s
 MF_ALARMS_CA_CERTS=""
 MF_ALARMS_CLIENT_TLS=false
 MF_ALARMS_DB_PORT=5432
