--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -1,7 +1,7 @@
 name: Build & Push Docker Images
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: [ "master" ]
     tags:
       - 'v*'
   pull_request:
