MF-954 - Consume group.remove event in notifiers
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -270,6 +270,8 @@ MF_SMTP_NOTIFIER_DB_PORT=5432
 MF_SMTP_NOTIFIER_DB_USER=mainflux
 MF_SMTP_NOTIFIER_DB_PASS=mainflux
 MF_SMTP_NOTIFIER_DB=smtp-notifiers
+MF_SMTP_NOTIFIER_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_SMTP_NOTIFIER_EVENT_CONSUMER=smpp-notifier
 
 ### SMPP Notifier
 MF_SMPP_NOTIFIER_PORT=9024
@@ -291,6 +293,8 @@ MF_SMPP_NOTIFIER_DB_PORT=5432
 MF_SMPP_NOTIFIER_DB_USER=mainflux
 MF_SMPP_NOTIFIER_DB_PASS=mainflux
 MF_SMPP_NOTIFIER_DB=smpp-notifiers
+MF_SMPP_NOTIFIER_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_SMPP_NOTIFIER_EVENT_CONSUMER=smpp-notifier
 
 # Filestore
 MF_FILESTORE_LOG_LEVEL=debug
