--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -602,6 +602,8 @@ services:
       MF_SMTP_NOTIFIER_SERVER_KEY: ${MF_SMTP_NOTIFIER_SERVER_KEY}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
+      MF_SMTP_NOTIFIER_ES_URL: ${MF_SMTP_NOTIFIER_ES_URL}
+      MF_SMTP_NOTIFIER_EVENT_CONSUMER: ${MF_SMTP_NOTIFIER_EVENT_CONSUMER}
     ports:
       - ${MF_SMTP_NOTIFIER_PORT}:${MF_SMTP_NOTIFIER_PORT}
     networks:
