MF-954 - Consume group.remove and thing.remove events in alarms
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -355,6 +355,8 @@ MF_ALARMS_DB_PORT=5432
 MF_ALARMS_DB_USER=mainflux
 MF_ALARMS_DB_PASS=mainflux
 MF_ALARMS_DB=alarms
+MF_ALARMS_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_ALARMS_EVENT_CONSUMER=alarms
 
 ## Rules
 MF_RULES_LOG_LEVEL=debug
