--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -752,6 +752,8 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
+      MF_ALARMS_ES_URL: ${MF_ALARMS_ES_URL}
+      MF_ALARMS_EVENT_CONSUMER: ${MF_ALARMS_EVENT_CONSUMER}
     ports:
       - ${MF_ALARMS_HTTP_PORT}:${MF_ALARMS_HTTP_PORT}
     networks:
