MF-954 - Use pkg event consts in rules
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -370,6 +370,8 @@ MF_RULES_DB_PORT=5432
 MF_RULES_DB_USER=mainflux
 MF_RULES_DB_PASS=mainflux
 MF_RULES_DB=rules
+MF_RULES_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_RULES_EVENT_CONSUMER=rules
 
 ## Modbus
 MF_MODBUS_LOG_LEVEL=debug
