--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -792,6 +792,8 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
+      MF_RULES_ES_URL: ${MF_RULES_ES_URL}
+      MF_RULES_EVENT_CONSUMER: ${MF_RULES_EVENT_CONSUMER}
     ports:
       - ${MF_RULES_HTTP_PORT}:${MF_RULES_HTTP_PORT}
       - ${MF_RULES_GRPC_PORT}:${MF_RULES_GRPC_PORT}
