MF-954 - Add MF_SMPP_NOTIFIER_ES_URL and MF_SMPP_NOTIFIER_EVENT_CONSUMER envs
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/addons/smpp-notifier/docker-compose.yml
+++ b/docker/addons/smpp-notifier/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       MF_SMPP_NOTIFIER_SERVER_KEY: ${MF_SMPP_NOTIFIER_SERVER_KEY}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
+      MF_SMPP_NOTIFIER_ES_URL: ${MF_SMPP_NOTIFIER_ES_URL}
+      MF_SMPP_NOTIFIER_EVENT_CONSUMER: ${MF_SMPP_NOTIFIER_EVENT_CONSUMER}
     ports:
       - ${MF_SMPP_NOTIFIER_PORT}:${MF_SMPP_NOTIFIER_PORT}
     networks:
