extend org invites with suport for group membership assignment
Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

--- a/api/openapi/auth.yml
+++ b/api/openapi/auth.yml
@@ -941,6 +941,14 @@ components:
           type: string
           example: "editor"
           description: The user's proposed role in the organization.
+        groups:
+          type: object
+          description: Optional mapping of Group IDs to roles within that group. If present, upon accepting the invite, the recipient is also assigned as a member of the groups.
+          additionalProperties:
+            type: string
+          example:
+            abcd-efgh-1: "viewer"
+            abcd-efgh-2: "admin"
         
   parameters:
     ApiKeyId:
