MF-967 - Consume org.remove event in things
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -110,6 +110,7 @@ MF_THINGS_DB=things
 MF_THINGS_ES_URL=localhost:6379
 MF_THINGS_ES_PASS=
 MF_THINGS_ES_DB=0
+MF_THINGS_EVENT_CONSUMER=things
 
 ### HTTP
 MF_HTTP_ADAPTER_PORT=8185
