--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -1,4 +1,5 @@
 name: Build & Push Docker Images
+
 on:
   push:
     branches: [ "master" ]
@@ -13,55 +14,77 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.22"
+
+      - name: Run go fmt check
+        run: |
+          if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
+            echo "Code is not formatted. Please run `go fmt ./...`"
+            gofmt -s -l .
+            exit 1
+          fi
+
+      - name: Run go vet
+        run: go vet -mod=vendor -tags nats ./..
       
       - name: Run Go tests
-        run: go test ./...
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Set VERSION from Git tag
+        run: make test
+
+      - name: Set VERSION from Git tag or commit
         id: version
         run: |
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
           else
-            VERSION=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v0.0.0")
+            VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.33.0")
             VERSION="${VERSION}-${GITHUB_SHA::7}"
           fi
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "Building version: ${VERSION}"
       
-      - name: Build Docker images using Makefile
-        run: make dockers VERSION=${{ steps.version.outputs.version }}
+      - name: Build Docker images
+        run: |
+          make dockers \
+            VERSION=${{ steps.version.outputs.version }} \
+            COMMIT=${GITHUB_SHA} \
+            TIME=$(date +%F_%T)
       
-      - name: Push Docker images
+      - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Push Docker images with version tag
+        if: github.event_name != 'pull_request'
         run: |
           for svc in users things http coap ws mongodb-writer \
-            mongodb-reader postgres-writer postgres-reader timescale-writer timescale-reader cli \
-            auth mqtt certs smtp-notifier smpp-notifier alarms rules; do
-              docker push mainfluxlabs/$svc:${{ steps.version.outputs.version }}
+            mongodb-reader postgres-writer postgres-reader timescale-writer \
+            timescale-reader cli auth mqtt certs smtp-notifier \
+            smpp-notifier alarms rules; do
+              echo "Pushing ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:${{ steps.version.outputs.version }}"
+              docker push ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:${{ steps.version.outputs.version }}
           done
       
-      - name: Create release artifact
+      - name: Tag and push latest (master branch only)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
-          echo "${{ steps.version.outputs.version }}" > version.txt
-      
-      - name: Upload version artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: version
-          path: version.txt
+          for svc in users things http coap ws mongodb-writer \
+            mongodb-reader postgres-writer postgres-reader timescale-writer \
+            timescale-reader cli auth mqtt certs smtp-notifier \
+            smpp-notifier alarms rules; do
+              echo "Tagging and pushing ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:latest"
+              docker tag ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:${{ steps.version.outputs.version }} \
+                ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:latest
+              docker push ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:latest
+          done 
