--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -2,11 +2,11 @@ name: Build & Push Docker Images
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "feature/cicd" ]
     tags:
       - 'v*'
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "feature/cicd" ]
 
 env:
   MF_DOCKER_IMAGE_NAME_PREFIX: mainfluxlabs
@@ -34,7 +34,7 @@ jobs:
           fi
 
       - name: Run go vet
-        run: go vet -mod=vendor -tags nats ./..
+        run: go vet -mod=vendor -tags nats ./...
       
       - name: Run Go tests
         run: make test
@@ -45,7 +45,7 @@ jobs:
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
           else
-            VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.33.0")
+            VERSION=$(git describe --tags --abbrev=0 2>/dev/null)
             VERSION="${VERSION}-${GITHUB_SHA::7}"
           fi
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
@@ -57,34 +57,3 @@ jobs:
             VERSION=${{ steps.version.outputs.version }} \
             COMMIT=${GITHUB_SHA} \
             TIME=$(date +%F_%T)
-      
-      - name: Log in to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Push Docker images with version tag
-        if: github.event_name != 'pull_request'
-        run: |
-          for svc in users things http coap ws mongodb-writer \
-            mongodb-reader postgres-writer postgres-reader timescale-writer \
-            timescale-reader cli auth mqtt certs smtp-notifier \
-            smpp-notifier alarms rules; do
-              echo "Pushing ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:${{ steps.version.outputs.version }}"
-              docker push ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:${{ steps.version.outputs.version }}
-          done
-      
-      - name: Tag and push latest (master branch only)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: |
-          for svc in users things http coap ws mongodb-writer \
-            mongodb-reader postgres-writer postgres-reader timescale-writer \
-            timescale-reader cli auth mqtt certs smtp-notifier \
-            smpp-notifier alarms rules; do
-              echo "Tagging and pushing ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:latest"
-              docker tag ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:${{ steps.version.outputs.version }} \
-                ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:latest
-              docker push ${MF_DOCKER_IMAGE_NAME_PREFIX}/$svc:latest
-          done 
