--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           go-version: "1.22"
 
+      - name: Run go fmt
+        uses: |
+          go fmt ./...
+
       - name: Run go fmt check
         run: |
           if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
