--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -25,14 +25,10 @@ jobs:
         with:
           go-version: "1.22"
 
-      - name: Run go fmt
-        uses: |
-          go fmt ./...
-
       - name: Run go fmt check
         run: |
           if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
-            echo "Code is not formatted. Please run `go fmt ./...`"
+            echo "Code is not formatted. Please run 'go fmt ./...'"
             gofmt -s -l .
             exit 1
           fi
