--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -27,13 +27,24 @@ jobs:
 
       - name: Auto-format Go code
         run: go fmt ./...
-
+      
+      - name: Check for formatting changes
+        id: verify-changed-files
+        run: |
+          if git diff --quiet; then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Commit formatting changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore: auto-format code with go fmt"
-          commit_user_name: github-actions[bot]
-          commit_user_email: github-actions[bot]@users.noreply.github.com
+        if: steps.verify-changed-files.outputs.changed == 'true'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add -A
+          git commit -m "chore: auto-format code with go fmt [skip ci]"
+          git push
 
       - name: Run go vet
         run: go vet -mod=vendor -tags nats ./...
