MF-985 - Publish messages to NATS from adapters (#986)
* Revert publishing on nats from adapters

Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

* Remove rules grpc server and consume nats messages

Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

* Revert mqtt Save test

Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

---------

Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -316,8 +316,6 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
       MF_AUTH_CACHE_URL: auth-redis:${MF_REDIS_TCP_PORT}
       MF_MQTT_ADAPTER_DB_PORT: ${MF_MQTT_ADAPTER_DB_PORT}
       MF_MQTT_ADAPTER_DB_USER: ${MF_MQTT_ADAPTER_DB_USER}
@@ -329,7 +327,6 @@ services:
       MF_AUTH_GRPC_URL: ${MF_AUTH_GRPC_URL}
     ports:
       - ${MF_MQTT_ADAPTER_HTTP_PORT}:${MF_MQTT_ADAPTER_HTTP_PORT}
-
     networks:
       - mainfluxlabs-base-net
 
@@ -338,16 +335,15 @@ services:
     container_name: mainfluxlabs-http
     depends_on:
       - things
-      - rules
+      - broker
     restart: on-failure
     environment:
       MF_HTTP_ADAPTER_LOG_LEVEL: debug
       MF_HTTP_ADAPTER_PORT: ${MF_HTTP_ADAPTER_PORT}
+      MF_BROKER_URL: ${MF_NATS_URL}
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
     ports:
       - ${MF_HTTP_ADAPTER_PORT}:${MF_HTTP_ADAPTER_PORT}
     networks:
@@ -367,7 +363,6 @@ services:
     container_name: mainfluxlabs-coap
     depends_on:
       - things
-      - rules
       - broker
     restart: on-failure
     environment:
@@ -377,8 +372,6 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
     ports:
       - ${MF_COAP_ADAPTER_PORT}:${MF_COAP_ADAPTER_PORT}/udp
       - ${MF_COAP_ADAPTER_PORT}:${MF_COAP_ADAPTER_PORT}/tcp
@@ -390,7 +383,6 @@ services:
     container_name: mainfluxlabs-ws
     depends_on:
       - things
-      - rules
       - broker
     restart: on-failure
     environment:
@@ -400,8 +392,6 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
     ports:
       - ${MF_WS_ADAPTER_PORT}:${MF_WS_ADAPTER_PORT}
     networks:
@@ -631,7 +621,6 @@ services:
     container_name: mainfluxlabs-downlinks
     depends_on:
       - things
-      - rules
       - downlinks-db
     restart: on-failure
     environment:
@@ -647,8 +636,6 @@ services:
       MF_DOWNLINKS_SERVER_KEY: ${MF_DOWNLINKS_SERVER_KEY}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
       MF_DOWNLINKS_ES_URL: ${MF_DOWNLINKS_ES_URL}
       MF_DOWNLINKS_EVENT_CONSUMER: ${MF_DOWNLINKS_EVENT_CONSUMER}
     ports:
@@ -674,7 +661,6 @@ services:
     container_name: mainfluxlabs-modbus
     depends_on:
       - things
-      - rules
       - modbus-db
     restart: on-failure
     environment:
@@ -690,8 +676,6 @@ services:
       MF_MODBUS_SERVER_KEY: ${MF_MODBUS_SERVER_KEY}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
       MF_MODBUS_ES_URL: ${MF_MODBUS_ES_URL}
       MF_MODBUS_EVENT_CONSUMER: ${MF_MODBUS_EVENT_CONSUMER}
     ports:
@@ -705,7 +689,6 @@ services:
     restart: on-failure
     depends_on:
       - things
-      - rules
     environment:
       MF_CONVERTERS_LOG_LEVEL: ${MF_CONVERTERS_LOG_LEVEL}
       MF_CONVERTERS_CLIENT_TLS: ${MF_CONVERTERS_CLIENT_TLS}
@@ -714,8 +697,6 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_RULES_GRPC_URL: ${MF_RULES_GRPC_URL}
-      MF_RULES_GRPC_TIMEOUT: ${MF_RULES_GRPC_TIMEOUT}
     ports:
       - ${MF_CONVERTERS_PORT}:${MF_CONVERTERS_PORT}
     networks:
@@ -791,7 +772,6 @@ services:
       MF_RULES_DB_PASS: ${MF_RULES_DB_PASS}
       MF_RULES_DB: ${MF_RULES_DB}
       MF_RULES_HTTP_PORT: ${MF_RULES_HTTP_PORT}
-      MF_RULES_GRPC_PORT: ${MF_RULES_GRPC_PORT}
       MF_RULES_SERVER_CERT: ${MF_RULES_SERVER_CERT}
       MF_RULES_SERVER_KEY: ${MF_RULES_SERVER_KEY}
       MF_JAEGER_URL: ${MF_JAEGER_URL}
@@ -801,7 +781,6 @@ services:
       MF_RULES_EVENT_CONSUMER: ${MF_RULES_EVENT_CONSUMER}
     ports:
       - ${MF_RULES_HTTP_PORT}:${MF_RULES_HTTP_PORT}
-      - ${MF_RULES_GRPC_PORT}:${MF_RULES_GRPC_PORT}
     networks:
       - mainfluxlabs-base-net
 
