--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.22"
+          cache: true
 
       - name: Formatting
         run: go fmt ./...
