--- a/.github/workflows/go-deploy.yml
+++ b/.github/workflows/go-deploy.yml
@@ -24,13 +24,8 @@ jobs:
           go-version: "1.22"
           cache: true
 
-      - name: Check formatting
-        run: |
-          if [ -n "$(gofmt -l .)" ]; then
-            echo "These files need formatting:"
-            gofmt -l .
-            exit 1
-          fi
+      - name: Formatting
+        run: go fmt ./...
 
       - name: Run go vet
         run: go vet -mod=vendor -tags nats ./...
@@ -46,7 +41,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      
       - name: Set version
         id: version
         run: |
