MF-912 - Support optional Group assignment when creating Org Invites (#968)
* extend org invites with suport for group membership assignment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* implement group membership assignment e-mail notification support

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* add group membership assignment info to org invite email notification

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* add email server env. vars. to things/README.md

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove comment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* mocks: implement auth.ViewOrg

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* expose ViewGroupInternal things svc method and use it in ViewGroup gRPC call

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* rename things.SaveGroupMemberships -> CreateGroupMembershipsInternal

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* mfx.proto: add newline

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove debug prints

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove comment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* protobuf: remove description field for org and group resonse types

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* things grpc: rename ViewGroup -> GetGroup

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* auth openapi: use real uuid format as obj key

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* fix typo in comment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove blank line

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove unnecessary map length check if db helper

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* fix metrics and logs for CreateGroupMembershipsInternal

Signe

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -246,6 +246,14 @@ services:
       MF_USERS_GRPC_URL: ${MF_USERS_GRPC_URL}
       MF_USERS_CA_CERTS: ${MF_USERS_CA_CERTS}
       MF_USERS_CLIENT_TLS: ${MF_USERS_CLIENT_TLS}
+      MF_EMAIL_HOST: ${MF_EMAIL_HOST}
+      MF_EMAIL_PORT: ${MF_EMAIL_PORT}
+      MF_EMAIL_USERNAME: ${MF_EMAIL_USERNAME}
+      MF_EMAIL_PASSWORD: ${MF_EMAIL_PASSWORD}
+      MF_EMAIL_FROM_ADDRESS: ${MF_EMAIL_FROM_ADDRESS}
+      MF_EMAIL_FROM_NAME: ${MF_EMAIL_FROM_NAME}
+      MF_EMAIL_BASE_TEMPLATE: ${MF_EMAIL_BASE_TEMPLATE}
+      MF_HOST: ${MF_HOST}
       MF_THINGS_EVENT_CONSUMER: ${MF_THINGS_EVENT_CONSUMER}
     ports:
       - ${MF_THINGS_HTTP_PORT}:${MF_THINGS_HTTP_PORT}
@@ -253,6 +261,9 @@ services:
       - ${MF_THINGS_AUTH_GRPC_PORT}:${MF_THINGS_AUTH_GRPC_PORT}
     networks:
       - mainfluxlabs-base-net
+    volumes:
+      - ./templates/base.tmpl:/base.tmpl
+      - ./templates/things/group_membership.tmpl:/group_membership.tmpl
 
   jaeger:
     image: jaegertracing/all-in-one:1.20
