rename 'groups` JSON object property in HTTP API for creating org/platform invites
Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

--- a/api/openapi/auth.yml
+++ b/api/openapi/auth.yml
@@ -941,7 +941,7 @@ components:
           type: string
           example: "editor"
           description: The user's proposed role in the organization.
-        groups:
+        group_invites:
           type: array
           description: Optional array a list of Groups and roles within those groups. If present, upon accepting the invite, the recipient is also assigned as a member of the groups.
           items:
