rename openapi schema
Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

--- a/api/openapi/users.yml
+++ b/api/openapi/users.yml
@@ -560,7 +560,7 @@ components:
           type: array
           description: Optional mapping of Group IDs to roles within that group. If present, upon accepting the invite, the recipient is also assigned as a member of the groups.
           items:
-            $ref: "#/components/schemas/InviteGroup"
+            $ref: "#/components/schemas/GroupInvite"
       required:
         - redirect_path
         - email
@@ -687,7 +687,7 @@ components:
         error:
           type: string
           description: Error message
-    InviteGroup:
+    GroupInvite:
       type: object
       properties:
         group_id:
