MF-980 - Support Group assignment when creating Platform+Org invites (#981)
* extend org invites with suport for group membership assignment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* implement group membership assignment e-mail notification support

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* add group membership assignment info to org invite email notification

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* add email server env. vars. to things/README.md

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove comment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* mocks: implement auth.ViewOrg

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* expose ViewGroupInternal things svc method and use it in ViewGroup gRPC call

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* rename things.SaveGroupMemberships -> CreateGroupMembershipsInternal

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* mfx.proto: add newline

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove debug prints

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove comment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* protobuf: remove description field for org and group resonse types

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* platform invites: allow creating org invites tied to groups

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* things grpc: rename ViewGroup -> GetGroup

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* auth openapi: use real uuid format as obj key

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* use correct things grpc method

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* fix typo in comment

Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

* remove blank line

Signed-off-by: Bogd

--- a/api/openapi/users.yml
+++ b/api/openapi/users.yml
@@ -556,6 +556,11 @@ components:
           type: string
           description: The invited user's role in the Organization. Only required if "org_id" is supplied.
           enum: [admin, editor, viewer]
+        group_invites:
+          type: array
+          description: Optional list of Groups and roles within those groups. If present, upon accepting the invite, the recipient is also assigned as a member of the groups.
+          items:
+            $ref: "#/components/schemas/GroupInvite"
       required:
         - redirect_path
         - email
@@ -682,6 +687,17 @@ components:
         error:
           type: string
           description: Error message
+    GroupInvite:
+      type: object
+      properties:
+        group_id:
+          type: string
+          format: uuid
+          description: The ID of the group.
+        member_role:
+          type: string
+          description: The member's proposed role in the group.
+          example: "admin"
 
   parameters:
     Referer:
